--- a/inventario/templates/inventario/dashboard.html
+++ b/inventario/templates/inventario/dashboard.html
@@ -91,6 +91,18 @@
                 </div>
             </div>
         </div>
+        <div class="col-xl-8 col-lg-12">
+            <div class="card card-h-100">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between align-items-center mb-2">
+                        <h4 class="header-title">Productos más vendidos</h4>
+                    </div>
+                    <div dir="ltr">
+                        <div id="productosMasvendidos" class="apex-charts" data-colors="#727cf5,#e3eaef"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="col-xl-4 col-lg-6">
             <div class="card">
                 <div class="card-body">
@@ -98,46 +110,27 @@
                         <h4 class="header-title">Ventas por empleado</h4>
                     </div>
 
-                    <div id="views-min" class="apex-charts mt-2" data-colors="#0acf97"></div>
+                    <div id="ventasEmpleado" class="apex-charts mt-2" data-colors="#0acf97"></div>
 
                     <div class="table-responsive mt-3">
                         <table class="table table-sm mb-0 font-13">
                             <thead>
                                 <tr>
-                                    <th>Page</th>
-                                    <th>Views</th>
-                                    <th>Bounce Rate</th>
+                                    <th>#</th>
+                                    <th>Nombre del empleado</th>
+                                    <th>Cantidad</th>
+                                    <th>Ventas (S/.)</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>
-                                        <a href="javascript:void(0);" class="text-muted">/hyper/dashboard-analytics</a>
-                                    </td>
-                                    <td>25</td>
-                                    <td>87.5%</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="javascript:void(0);" class="text-muted">/hyper/dashboard-crm</a>
-                                    </td>
-                                    <td>15</td>
-                                    <td>21.48%</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="javascript:void(0);" class="text-muted">/ubold/dashboard</a>
-                                    </td>
-                                    <td>10</td>
-                                    <td>63.59%</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="javascript:void(0);" class="text-muted">/minton/home</a>
-                                    </td>
-                                    <td>7</td>
-                                    <td>56.12%</td>
-                                </tr>
+                                {% for empleado in ventas_empleado %}
+                                    <tr>
+                                        <th>{{ forloop.counter }}</th>
+                                        <th>{{ empleado.nombre }}</th>
+                                        <th>{{ empleado.cantidad }}</th>
+                                        <th>{{ empleado.ventas }}</th>
+                                    </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
                     </div>
@@ -153,61 +146,29 @@
                         <table class="table table-sm table-centered mb-0 font-14">
                             <thead class="table-light">
                                 <tr>
-                                    <th>Channel</th>
-                                    <th>Visits</th>
-                                    <th style="width: 40%;"></th>
+                                    <th>Categoria</th>
+                                    <th>Cantidad de productos</th>
+                                    <th>Porcentaje del total de stock</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>Direct</td>
-                                    <td>2,050</td>
-                                    <td>
-                                        <div class="progress" style="height: 3px;">
-                                            <div class="progress-bar" role="progressbar"
-                                                style="width: 65%; height: 20px;" aria-valuenow="65" aria-valuemin="0"
-                                                aria-valuemax="100"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Organic Search</td>
-                                    <td>1,405</td>
-                                    <td>
-                                        <div class="progress" style="height: 3px;">
-                                            <div class="progress-bar bg-info" role="progressbar"
-                                                style="width: 45%; height: 20px;" aria-valuenow="45" aria-valuemin="0"
-                                                aria-valuemax="100"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Refferal</td>
-                                    <td>750</td>
-                                    <td>
-                                        <div class="progress" style="height: 3px;">
-                                            <div class="progress-bar bg-warning" role="progressbar"
-                                                style="width: 30%; height: 20px;" aria-valuenow="30" aria-valuemin="0"
-                                                aria-valuemax="100"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Social</td>
-                                    <td>540</td>
-                                    <td>
-                                        <div class="progress" style="height: 3px;">
-                                            <div class="progress-bar bg-danger" role="progressbar"
-                                                style="width: 25%; height: 20px;" aria-valuenow="25" aria-valuemin="0"
-                                                aria-valuemax="100"></div>
-                                        </div>
-                                    </td>
-                                </tr>
+                                {% for categoria in categorias_productos %}
+                                    <tr>
+                                        <td>{{ categoria.nombre }}</td>
+                                        <td>{{ categoria.cantidad_productos }}</td>
+                                        <td>
+                                            <div class="progress custom-progress">
+                                                <div class="progress-bar bg-info {{ categoria.progress_class }}" role="progressbar"></div>
+                                                <span class="progress-label">{{ categoria.stock_porcentaje }}%</span>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
-                    </div> <!-- end table-responsive-->
-                </div> <!-- end card-body-->
-            </div> <!-- end card-->
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="col-xl-4 col-lg-6">
             <div class="card">
@@ -218,64 +179,35 @@
                         <table class="table table-sm table-centered mb-0 font-14">
                             <thead class="table-light">
                                 <tr>
-                                    <th>Duration (Secs)</th>
-                                    <th style="width: 30%;">Sessions</th>
-                                    <th style="width: 30%;">Views</th>
+                                    <th>Nombre</th>
+                                    <th class="col-menor-stock">Stock</th>
+                                    <th class="col-menor-stock">Precio</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>0-30</td>
-                                    <td>2,250</td>
-                                    <td>4,250</td>
-                                </tr>
-                                <tr>
-                                    <td>31-60</td>
-                                    <td>1,501</td>
-                                    <td>2,050</td>
-                                </tr>
-                                <tr>
-                                    <td>61-120</td>
-                                    <td>750</td>
-                                    <td>1,600</td>
-                                </tr>
-                                <tr>
-                                    <td>121-240</td>
-                                    <td>540</td>
-                                    <td>1,040</td>
-                                </tr>
+                                {% for menor in menor_stock %}
+                                    <tr>
+                                        <td>{{ menor.nombre }}</td>
+                                        <td>{{ menor.stock }}</td>
+                                        <td>{{ menor.precio }}</td>
+                                    </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
-                    </div> <!-- end table-responsive-->
-                </div> <!-- end card-body-->
-            </div> <!-- end card-->
-        </div>
-        <div class="col-xl-8 col-lg-12">
-            <div class="card card-h-100">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between align-items-center mb-2">
-                        <h4 class="header-title">Productos más vendidos</h4>
                     </div>
-
-                    <div dir="ltr">
-                        <div id="high-performing-product" class="apex-charts" data-colors="#727cf5,#e3eaef"></div>
-                    </div>
-
-                </div> <!-- end card-body-->
-            </div> <!-- end card-->
-
+                </div>
+            </div>
         </div>
+        
     </div>
 
 </div>
 {% endblock content %}
 {% block javascripts %}
-<script>
-    window.ventasDia = {{ ventas_dia | safe }};
-    window.comprasPorcentaje = {{ compras.porcentaje | safe }};
-</script>
 <script src="{% static 'js/graficos.js' %}"></script>
 <script src="{% static 'js/jquery-jvectormap-1.2.2.min.js' %}"></script>
 <script src="{% static 'js/jquery-jvectormap-world-mill-en.js' %}"></script>
 <script src="{% static 'js/dashboard.js' %}"></script>
+<script src="{% static 'js/SVIC.js' %}"></script>
+
 {% endblock %}
