--- a/chat/templates/chat/chat.html
+++ b/chat/templates/chat/chat.html
@@ -2,75 +2,8 @@
 {% load static %}
 
 {% block content %}
-<style>
-.typing .dot {
-  -webkit-animation: TypingAnimation 1.8s infinite ease-in-out;
-          animation: TypingAnimation 1.8s infinite ease-in-out;
-  background-color: rgba(20, 25, 30, 0.7);
-  border-radius: 50%;
-  height: 7px;
-  margin-right: 4px;
-  vertical-align: middle;
-  width: 7px;
-  display: inline-block;
-}
-.typing .dot:nth-child(1) {
-  -webkit-animation-delay: 200ms;
-          animation-delay: 200ms;
-}
-.typing .dot:nth-child(2) {
-  -webkit-animation-delay: 300ms;
-          animation-delay: 300ms;
-}
-.typing .dot:nth-child(3) {
-  -webkit-animation-delay: 400ms;
-          animation-delay: 400ms;
-}
-.typing .dot:last-child {
-  margin-right: 0;
-}
+<link href="{% static 'css/chat/chat.css' %}" rel="stylesheet">
 
-@-webkit-keyframes TypingAnimation {
-  0% {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-    background-color: rgba(20, 25, 30, 0.7);
-  }
-  28% {
-    -webkit-transform: translateY(-7px);
-            transform: translateY(-7px);
-    background-color: rgba(20, 25, 30, 0.4);
-  }
-  44% {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-    background-color: rgba(20, 25, 30, 0.2);
-  }
-}
-
-@keyframes TypingAnimation {
-  0% {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-    background-color: rgba(20, 25, 30, 0.7);
-  }
-  28% {
-    -webkit-transform: translateY(-7px);
-            transform: translateY(-7px);
-    background-color: rgba(20, 25, 30, 0.4);
-  }
-  44% {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-    background-color: rgba(20, 25, 30, 0.2);
-  }
-}
-
-.chat-conversation-content {
-  overflow-wrap: break-word;
-  word-break: break-word;
-}
-</style>
 <div class="container">
   <div class="row mt-3">
     <div class="card card-chat rounded-start-lg-0 border-start-lg-0">
@@ -80,25 +13,25 @@
             <div class="d-sm-flex justify-content-between align-items-center">
               <div class="d-flex mb-2 mb-sm-0">
                 <div class="flex-shrink-0 avatar me-2">
-                  <img class="avatar-img rounded-circle" src="{% static 'imagenes/bot.png' %}" alt="" style="max-width: 100%; height: 60px;">
+                  <img class="avatar-img rounded-circle max-100 h-60" src="{% static 'imagenes/bot.png' %}">
                 </div>
                 <div class="d-block flex-grow-1">
                   <h6 class="mb-0 mt-1">Inventa BOT</h6>
-                  <div class="small text-secondary"><i class="fa-solid fa-circle text-success me-1"></i>Online</div>
+                  <div class="small text-secondary"><i class="mdi mdi-circle text-success me-1"></i>Online</div>
                 </div>
               </div>
               <div class="d-flex align-items-center">
-                <a class="rounded-circle btn btn-primary-soft me-2 px-2" data-target="chatToast" href="{% url 'chat' %}" > <i class="mdi mdi-square-edit-outline fs-2"></i> </a>
+                <a class="rounded-circle btn btn-primary-soft me-2 px-2" data-target="chatToast" href="{% url 'chat' %}"><i class="mdi mdi-square-edit-outline fs-2"></i></a>
               </div>
             </div>
             <hr>
             <div class="chat-conversation-content custom-scrollbar" id="chat-mensajes">
               <div class="d-flex mb-1">
                 <div class="flex-shrink-0 avatar avatar-xs me-2">
-                  <img class="avatar-img rounded-circle" src="{% static 'imagenes/bot.png' %}" alt="" style="max-width: 100%;">
+                  <img class="avatar-img rounded-circle max-100" src="{% static 'imagenes/bot.png' %}">
                 </div>
                 <div class="flex-grow-1">
-                  <div style="max-width: 75%; width:auto;">
+                  <div class="max-75 w-auto">
                     <div class="d-flex flex-column align-items-start">
                       <div class="bg-light text-secondary p-2 px-3 rounded-2">Hola, en que puedo ayudarte hoy 😎</div>
                       <div class="small my-2" id="hora-actual"></div>
@@ -113,93 +46,13 @@
       <div class="card-footer">
         <div class="d-sm-flex align-items-end">
           <textarea class="form-control mb-sm-0 mb-3" data-autoresize placeholder="Ingresa tu mensaje" rows="1" id="mensaje"></textarea>
-          <button class="btn btn-sm btn-primary ms-2" id="enviar"><i class="fa-solid fa-paper-plane fs-6"></i></button>
+          <button class="btn btn-sm btn-primary ms-2" id="enviar"><i class="mdi mdi-send fs-6"></i></button>
         </div>
       </div>
     </div>
   </div>
 </div>
-<script>
-  function actualizarHora(nombre) {
-    const ahora = new Date();
-    let horas = ahora.getHours();
-    let minutos = ahora.getMinutes();
-    const ampm = horas >= 12 ? 'PM' : 'AM';
-
-    horas = horas % 12;
-    horas = horas ? horas : 12;
-    minutos = minutos < 10 ? '0' + minutos : minutos;
-
-    const horaFormateada = `${horas}:${minutos} ${ampm}`;
-    document.getElementById(nombre).textContent = horaFormateada;
-  }
-
-  actualizarHora('hora-actual');
-
-  document.getElementById('enviar').addEventListener('click', enviarMensaje);
-
-  function enviarMensaje() {
-    const mensajeInput = document.getElementById('mensaje');
-    const mensajeTexto = mensajeInput.value.trim();
-    if (!mensajeTexto) return;
-
-    const ahora = new Date();
-    let horas = ahora.getHours();
-    let minutos = ahora.getMinutes();
-    const ampm = horas >= 12 ? 'PM' : 'AM';
-
-    horas = horas % 12;
-    horas = horas ? horas : 12;
-    minutos = minutos < 10 ? '0' + minutos : minutos;
-
-    const horaFormateada = `${horas}:${minutos} ${ampm}`;
-
-    const mensajeHTML = `
-      <div class="d-flex justify-content-end text-end mb-1">
-        <div style="max-width: 75%; width:auto;">
-          <div class="d-flex flex-column align-items-end">
-            <div class="bg-primary text-white p-2 px-3 rounded-2">${mensajeTexto}</div>
-            <div class="d-flex my-2">
-              <div class="small text-secondary">${horaFormateada}</div>
-              <div class="small ms-2"><i class="fa-solid fa-check-double text-info"></i></div>
-            </div>
-          </div>
-        </div>
-      </div>`;
-
-    document.getElementById('chat-mensajes').insertAdjacentHTML('beforeend', mensajeHTML);
-    mensajeInput.value = '';
-    fetch("{% url 'chat_api' %}", {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-      },
-      body: JSON.stringify({ message: mensajeTexto })
-    })
-    .then(res => res.json())
-    .then(data => {
-      const botHTML = `
-        <div class="d-flex mb-1">
-          <div class="flex-shrink-0 avatar avatar-xs me-2">
-            <img class="avatar-img rounded-circle" src="{% static 'imagenes/bot.png' %}" style="max-width: 100%;">
-          </div>
-          <div class="flex-grow-1">
-            <div style="max-width: 75%; width:auto;">
-              <div class="d-flex flex-column align-items-start">
-                <div class="bg-light text-secondary p-2 px-3 rounded-2">
-                  ${ marked.parse(data.text) }
-                </div>
-                <div class="small my-2">${horaFormateada}</div>
-              </div>
-            </div>
-          </div>
-        </div>`;
-      document.getElementById('chat-mensajes').insertAdjacentHTML('beforeend', botHTML);
-    })
-    .catch(console.error);
-  }
-
-</script>
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="{% static 'js/chat/chat.js' %}"></script>
+<script src="{% static 'js/chat/marked.js' %}"></script>
 
 {% endblock %}
