--- a/compras/templates/compras/crearCompra.html
+++ b/compras/templates/compras/crearCompra.html
@@ -26,6 +26,7 @@
     </div>
 
     <form id="form_sale" action="{% url 'crearCompra' %}" class="saleForm" method="post">
+        {% csrf_token %}
         <div class="row">
             <div class="col-lg-4 mb-4">
                 <div class="card border-light shadow-sm">
