--- a/inventario/templates/inventario/listaCategorias.html
+++ b/inventario/templates/inventario/listaCategorias.html
@@ -160,7 +160,7 @@ function mostrarToast(tipo, mensaje) {
     toastEl.className = `toast align-items-center text-white bg-${tipo} border-0`;
     toastEl.innerHTML = `
         <div class="d-flex">
-            <div class="toast-body">${mensaje}</div>
+            <div class="toast-body">${DOMPurify.sanitize(mensaje)}</div>
             <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
         </div>
     `;
@@ -239,9 +239,9 @@ function agregarUnidadATabla(categoria) {
                 <label class="form-check-label" for="customCheck2">&nbsp;</label>
             </div>
         </td>
-        <td>${categoria.nombre}</td>
-        <td>${categoria.descripcion || ''}</td>
-        <td>${formatearFecha(categoria.fecha_creacion)}</td>
+        <td>${DOMPurify.sanitize(categoria.nombre)}</td>
+        <td>${DOMPurify.sanitize(categoria.descripcion || '')}</td>
+        <td>${DOMPurify.sanitize(formatearFecha(categoria.fecha_creacion))}</td>
         <td class="table-action d-flex justify-content-center gap-2">
             <a href="javascript:void(0);" class="btn btn-bg font-14 btn-success d-inline-flex" id="btn-new-event">
                 <i class="mdi mdi-square-edit-outline"></i>Editar
