--- a/usuarios/templates/usuarios/crearEmpresa.html
+++ b/usuarios/templates/usuarios/crearEmpresa.html
@@ -5,7 +5,6 @@
 <script src="{% static 'js/vendor.min.js' %}"></script>
 <script src="{% static 'js/app.min.js' %}"></script>
 
-
 <div class="container-fluid">
     <div class="col-12 col-lg-10 mx-auto">
         <div class="card">
@@ -40,39 +39,38 @@
                         </ul>
 
                         <div class="tab-content b-0 mb-0">
-                            <div id="bar" class="progress mb-3" style="height: 7px;">
-                                <div class="bar progress-bar progress-bar-striped progress-bar-animated bg-success">
-                                </div>
+                            <div id="bar" class="progress mb-3 progress-height">
+                                <div class="bar progress-bar progress-bar-striped progress-bar-animated bg-success"></div>
                             </div>
 
-                            <div class="tab-pane" id="usuario">
+                            <div class="tab-pane fade show active" id="usuario">
                                 <div class="row">
                                     <div class="col-12">
                                         <div class="row mb-3">
                                             <label class="col-md-3 col-form-label" for="nombre">Nombre</label>
                                             <div class="col-md-9">
-                                                <input type="text" class="form-control" id="nombre"
+                                                <input type="text" maxlength="100" autocomplete="off" class="form-control" id="nombre"
                                                     name="gerente-nombre" placeholder="Nombre">
                                             </div>
                                         </div>
                                         <div class="row mb-3">
                                             <label class="col-md-3 col-form-label" for="apellido">Apellido</label>
                                             <div class="col-md-9">
-                                                <input type="text" class="form-control" id="apellido"
+                                                <input type="text" maxlength="100" autocomplete="off" class="form-control" id="apellido"
                                                     name="gerente-apellido" placeholder="Apellido">
                                             </div>
                                         </div>
                                         <div class="row mb-3">
                                             <label class="col-md-3 col-form-label" for="dni">Dni</label>
                                             <div class="col-md-9">
-                                                <input type="text" class="form-control" id="dni" name="gerente-dni"
+                                                <input type="text" maxlength="8" autocomplete="off" class="form-control" id="dni" name="gerente-dni"
                                                     placeholder="Dni">
                                             </div>
                                         </div>
                                         <div class="row mb-3">
                                             <label class="col-md-3 col-form-label" for="password1">Contraseña</label>
                                             <div class="col-md-9">
-                                                <input type="password" id="password1" name="gerente-password1"
+                                                <input type="password" maxlength="100" autocomplete="off" id="password1" name="gerente-password1"
                                                     class="form-control" placeholder="123456789">
                                             </div>
                                         </div>
@@ -80,14 +78,15 @@
                                             <label class="col-md-3 col-form-label" for="password2">Repita su
                                                 contraseña</label>
                                             <div class="col-md-9">
-                                                <input type="password" id="password2" name="gerente-password2"
+                                                <input type="password" maxlength="100" autocomplete="off" id="password2" name="gerente-password2"
                                                     class="form-control" placeholder="123456789">
                                             </div>
                                         </div>
                                         <div class="row mb-3">
-                                            <label class="col-md-3 col-form-label" for="telefono">Telefono personal</label>
+                                            <label class="col-md-3 col-form-label" for="telefono">Telefono
+                                                personal</label>
                                             <div class="col-md-9">
-                                                <input type="text" class="form-control" id="telefono"
+                                                <input type="text" maxlength="100" autocomplete="off" class="form-control" id="telefono"
                                                     name="gerente-telefono" placeholder="Telefono">
                                             </div>
                                         </div>
@@ -95,12 +94,13 @@
                                             <label class="col-md-3 col-form-label" for="email">Correo personal
                                                 (opcional)</label>
                                             <div class="col-md-9">
-                                                <input type="email" class="form-control" id="email" name="gerente-email"
+                                                <input type="email" maxlength="100" autocomplete="off" class="form-control" id="email" name="gerente-email"
                                                     placeholder="ejemplo@gmail.com">
                                             </div>
                                         </div>
                                         <div class="row mb-3">
-                                            <label class="col-md-3 col-form-label" for="foto">Foto del gerente (opcional)</label>
+                                            <label class="col-md-3 col-form-label" for="foto">Foto del gerente
+                                                (opcional)</label>
                                             <div class="col-md-9">
                                                 <input class="form-control border-primary shadow-sm" type="file"
                                                     id="foto" name="gerente-foto" accept="image/*">
@@ -119,7 +119,7 @@
                                             <label class="col-md-3 col-form-label" for="nombreNegocio">Nombre de la
                                                 empresa</label>
                                             <div class="col-md-9">
-                                                <input type="text" id="nombreNegocio" name="negocio-nombre"
+                                                <input type="text" maxlength="100" autocomplete="off" id="nombreNegocio" name="negocio-nombre"
                                                     class="form-control" placeholder="Nombre de la empresa">
                                             </div>
                                         </div>
@@ -127,9 +127,8 @@
                                             <label class="col-md-3 col-form-label" for="sectorEmpresa"> Sector de la
                                                 empresa</label>
                                             <div class="col-md-9">
-                                                <select class="form-select" id="sectorEmpresa" name="negocio-sector"
-                                                    required
-                                                    style="max-width: 100%; overflow: hidden; text-overflow: ellipsis; max-height: 200px;">
+                                                <select class="form-select ellipsis-style" id="sectorEmpresa"
+                                                    name="negocio-sector" required>
                                                     <option selected disabled>Seleccione un sector...</option>
                                                     <option value="tecnologia" title="Tecnología e Informática">🖥️
                                                         Tecnología
@@ -198,32 +197,35 @@
                                         <div class="row mb-3">
                                             <label class="col-md-3 col-form-label" for="direccion">Dirección</label>
                                             <div class="col-md-9">
-                                                <input type="text" id="direccion" name="negocio-direccion" class="form-control"
-                                                    placeholder="Dirección de la empresa">
+                                                <input type="text" maxlength="100" autocomplete="off" id="direccion" name="negocio-direccion"
+                                                    class="form-control" placeholder="Dirección de la empresa">
                                             </div>
                                         </div>
                                         <div class="row mb-3">
-                                            <label class="col-md-3 col-form-label" for="negocio-telefono">Telefono</label>
+                                            <label class="col-md-3 col-form-label"
+                                                for="negocio-telefono">Telefono</label>
                                             <div class="col-md-9">
-                                                <input type="text" id="negocio-telefono" name="negocio-telefono" class="form-control"
-                                                    placeholder="Telefono de la empresa">
+                                                <input type="text" maxlength="100" autocomplete="off" id="negocio-telefono" name="negocio-telefono"
+                                                    class="form-control" placeholder="Telefono de la empresa">
                                             </div>
                                         </div>
                                         <div class="row mb-3">
                                             <label class="col-md-3 col-form-label" for="ruc">RUC (opcional)</label>
                                             <div class="col-md-9">
-                                                <input type="text" id="ruc" name="negocio-ruc" class="form-control"
+                                                <input type="text" maxlength="11" autocomplete="off" id="ruc" name="negocio-ruc" class="form-control"
                                                     placeholder="RUC de la empresa">
                                             </div>
                                         </div>
                                         <div class="row mb-3">
-                                            <label class="col-md-3 col-form-label" for="descripcion">Descripción de la empresa (opcional)</label>
+                                            <label class="col-md-3 col-form-label" for="descripcion">Descripción de la
+                                                empresa (opcional)</label>
                                             <div class="col-md-9">
-                                                <textarea class="form-control" id="descripcion" name="negocio-descripcion"
-                                            rows="5" placeholder="Ingresa una descripción de la empresa"></textarea>
+                                                <textarea class="form-control" maxlength="100" autocomplete="off" id="descripcion"
+                                                    name="negocio-descripcion" rows="5"
+                                                    placeholder="Ingresa una descripción de la empresa"></textarea>
                                             </div>
                                         </div>
-                                        
+
                                     </div>
                                 </div>
                             </div>
@@ -235,136 +237,40 @@
                                             <h2 class="mt-0"><i class="mdi mdi-check-all"></i></h2>
                                             <h3 class="mt-0">¡Gracias por confiar en nosotros!</h3>
 
-                                            <p class="w-75 mb-2 mx-auto">Por favor, acepta los terminos y condiciones para
+                                            <p class="w-75 mb-2 mx-auto">Por favor, acepta los terminos y condiciones
+                                                para
                                                 crear tu cuenta.
                                             </p>
 
                                             <div class="mb-3">
                                                 <div class="form-check d-inline-block">
                                                     <input type="checkbox" class="form-check-input" id="customCheck3">
-                                                    <label class="form-check-label" for="customCheck3">Acepto los terminos y condiciones.</label>
+                                                    <label class="form-check-label" for="customCheck3">Acepto los
+                                                        terminos y
+                                                        condiciones.</label>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
-                            <ul class="list-inline mb-0 wizard">
-                                <li class="previous list-inline-item">
-                                    <a href="javascript:void(0);" class="btn btn-info">Anterior</a>
-                                </li>
-                                <li class="next list-inline-item float-end">
-                                    <a href="javascript:void(0);" id="btn-next" class="btn btn-primary">Siguiente</a>
-                                </li>
-                            </ul>
-
                         </div>
+
+                        <ul class="list-inline mb-0 wizard">
+                            <li class="previous list-inline-item">
+                                <a href="javascript:void(0);" class="btn btn-info">Anterior</a>
+                            </li>
+                            <li class="next list-inline-item float-end">
+                                <a href="javascript:void(0);" id="btn-next" class="btn btn-primary">Siguiente</a>
+                            </li>
+                        </ul>
+
                     </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
-
-
-<script>
-    let data = [];
-
-    fetch("{% static 'js/paises.json' %}")
-        .then(response => response.json())
-        .then(json => {
-            data = json;
-            populateCountries();
-        });
-
-    const countrySelect = document.getElementById('country');
-    const stateSelect = document.getElementById('state');
-    const citySelect = document.getElementById('city');
-
-    function populateCountries() {
-        data.forEach(country => {
-            const option = document.createElement('option');
-            option.value = country.iso2;
-            option.textContent = country.name;
-            countrySelect.appendChild(option);
-        });
-        countrySelect.disabled = false;
-    }
-
-    countrySelect.addEventListener('change', function () {
-        const selectedCountry = data.find(country => country.iso2 === this.value);
-        stateSelect.innerHTML = '<option value="">Seleccione una región</option>';
-        citySelect.innerHTML = '<option value="">Seleccione una ciudad</option>';
-        citySelect.disabled = true;
-
-        if (selectedCountry && selectedCountry.states.length > 0) {
-            selectedCountry.states.forEach(state => {
-                const option = document.createElement('option');
-                option.value = state.state_code;
-                option.textContent = state.name;
-                stateSelect.appendChild(option);
-            });
-            stateSelect.disabled = false;
-        } else {
-            stateSelect.disabled = true;
-        }
-    });
-
-    stateSelect.addEventListener('change', function () {
-        const selectedCountry = data.find(country => country.iso2 === countrySelect.value);
-        const selectedState = selectedCountry.states.find(state => state.state_code === this.value);
-        citySelect.innerHTML = '<option value="">Seleccione una ciudad</option>';
-
-        if (selectedState && selectedState.cities.length > 0) {
-            selectedState.cities.forEach(city => {
-                const option = document.createElement('option');
-                option.value = city.name;
-                option.textContent = city.name;
-                citySelect.appendChild(option);
-            });
-            citySelect.disabled = false;
-        } else {
-            citySelect.disabled = true;
-        }
-    });
-
-    $(function() {
-        "use strict";
-        $("#basicwizard").bootstrapWizard();
-        $("#progressbarwizard").bootstrapWizard({
-            onTabShow: function(t,r,a) {
-                var o = ( a + 1) / r.find("li").length * 100;
-                $("#progressbarwizard").find(".bar").css({width:o+"%"});
-            }
-        });
-        $("#btnwizard").bootstrapWizard({
-            nextSelector:".button-next",
-            previousSelector:".button-previous",
-            firstSelector:".button-first",
-            lastSelector:".button-last"
-        });
-        $("#rootwizard").bootstrapWizard({
-            onNext: function(t,r,a) {
-                var o = $($(t).data("targetForm"));
-                if ( o && (o.addClass("was-validated"), !1 === o[0].checkValidity()))
-                    return event.preventDefault(),event.stopPropagation(),!1
-                }
-            })
-    });
-    document.addEventListener("DOMContentLoaded", function () {
-        const nextBtn = document.getElementById("btn-next");
-
-        nextBtn.addEventListener("click", function (e) {
-            const activeTab = document.querySelector(".tab-pane.active");
-            const nextTab = activeTab.nextElementSibling;
-
-            if (!nextTab || !nextTab.classList.contains("tab-pane")) {
-                document.querySelector("form").submit();
-            }
-
-            e.preventDefault();
-        });
-    });
-</script>
+</div>
+<script src="{% static js/landing/empresa.js %}"></script>
 {% endblock content %}
