--- a/usuarios/templates/usuarios/landingCuerpo.html
+++ b/usuarios/templates/usuarios/landingCuerpo.html
@@ -6,11 +6,16 @@
   <div class="container">
     <div class="row flex-lg-nowrap">
       <div class="col-lg-6 col-xl-5 text-center text-lg-start pt-4">
-        <h1 class="display-4 pt-3 pb-2 pb-lg-3 mt-2">Asistente de ventas e inventario</h1>
+        <h1 class="display-4 mb-3">
+          Asistente de
+          <span class="text-primary text-highlight-warning">
+            <span id="typed-output"></span>
+          </span>
+        </h1>
         <p class="fs-lg mb-4 mb-lg-5">"Automatiza tu negocio, controla tu stock y aumenta tus ventas desde cualquier
           dispositivo."
         </p>
-        <a href="#caracteristicas" class="btn btn-primary btn-lg">Leer más</a>
+        <a href="{% url 'home' %}#caracteristicas" class="btn btn-primary btn-lg">Leer más</a>
       </div>
 
       <div class="col-md-5 offset-md-2 pt-3 mt-xl-1">
@@ -48,7 +53,8 @@
         <img src="{% static 'imagenes/landing/bell.svg' %}" width="32" alt="Icon">
       </div>
       <h3 class="h5 pb-1 mb-2">Notificaciones inteligentes</h3>
-      <p class="fs-sm">Recibe alertas automáticas a tu whatsapp sobre productos con bajo stock, vencimientos de promociones y más.
+      <p class="fs-sm">Recibe alertas automáticas a tu whatsapp sobre productos con bajo stock, vencimientos de
+        promociones y más.
       </p>
     </div>
 
@@ -100,33 +106,32 @@
 
 <section class="container pt-3 pt-md-4 pt-lg-5 pb-2 mt-lg-2 mt-xl-4" id="beneficios">
   <div class="row align-items-center">
-    <div class="rellax col-md-7" data-rellax-percentage="0.5" data-rellax-speed="-0.6" data-disable-parallax-down="lg">
-      <img src="{% static 'imagenes/landing/layout-2.png' %}" class="d-block mx-auto" width="746" alt="Image">
+    <div class="rellax col-md-7">
+      <img src="{% static 'imagenes/landing/muestra.jpg' %}" class="d-block mx-auto" width="746" alt="Image">
     </div>
-    <div class="rellax col-md-5 col-xl-4 offset-xl-1 d-flex d-sm-block flex-column" data-rellax-percentage="0.5"
-      data-rellax-speed="0.8" data-disable-parallax-down="lg">
+    <div class="rellax col-md-5 col-xl-4 offset-xl-1 d-flex d-sm-block flex-column">
       <h2 class="pb-3 pt-2 pt-md-0">Maneja tu empresa desde la palma de tu mano</h2>
       <ul class="list-unstyled pb-2">
         <li class="d-flex align-items-center pb-1 mb-2">
-          <i class="bx bx-check-circle text-primary fs-xl me-2"></i>
+          <i class="mdi mdi-check-circle text-primary fs-xl me-2"></i>
           Gestión de proyectos eficaz
         </li>
         <li class="d-flex align-items-center pb-1 mb-2">
-          <i class="bx bx-check-circle text-primary fs-xl me-2"></i>
+          <i class="mdi mdi-check-circle text-primary fs-xl me-2"></i>
           Gestión transparente del trabajo
         </li>
         <li class="d-flex align-items-center pb-1 mb-2">
-          <i class="bx bx-check-circle text-primary fs-xl me-2"></i>
+          <i class="mdi mdi-check-circle text-primary fs-xl me-2"></i>
           Gestionar el trabajo y centrarse en las tareas más importantes
         </li>
         <li class="d-flex align-items-center pb-1 mb-2">
-          <i class="bx bx-check-circle text-primary fs-xl me-2"></i>
+          <i class="mdi mdi-check-circle text-primary fs-xl me-2"></i>
           Realice un seguimiento del progreso con gráficos interactivos
         </li>
       </ul>
-      <a href="#" class="btn btn-primary">
+      <a href="{% url 'home' %}#caracteristicas" class="btn btn-primary">
         Leer más
-        <i class="bx bx-right-arrow-alt fs-xl ms-2"></i>
+        <i class="mdi mdi-arrow-right fs-xl ms-2"></i>
       </a>
     </div>
   </div>
@@ -138,7 +143,7 @@
     <div class="table-responsive-xxl pt-md-3">
       <div class="row flex-nowrap pb-4">
         <div class="col">
-          <div class="card h-100 border-0 shadow-sm p-xxl-3" style="min-width: 18rem;">
+          <div class="card h-100 border-0 shadow-sm p-xxl-3 min-width-18rem">
             <div class="card-body">
               <div class="d-flex align-items-center pb-2 pb-md-3 mb-4">
                 <div class="flex-shrink-0 bg-secondary rounded-3">
@@ -154,27 +159,27 @@
               </div>
               <ul class="list-unstyled fs-sm pb-md-3 mb-3">
                 <li class="d-flex mb-2">
-                  <i class="bx bx-check fs-xl text-primary me-1"></i>
+                  <i class="mdi mdi-check fs-xl text-primary me-1"></i>
                   Ventas y facturación ilimitadas
                 </li>
                 <li class="d-flex mb-2">
-                  <i class="bx bx-check fs-xl text-primary me-1"></i>
+                  <i class="mdi mdi-check fs-xl text-primary me-1"></i>
                   Gestión de inventario y productos
                 </li>
                 <li class="d-flex text-muted mb-2">
-                  <i class="bx bx-x fs-xl me-1"></i>
+                  <i class="mdi mdi-close fs-xl me-1"></i>
                   Notificaciones por whatsapp
                 </li>
                 <li class="d-flex text-muted mb-2">
-                  <i class="bx bx-x fs-xl me-1"></i>
+                  <i class="mdi mdi-close fs-xl me-1"></i>
                   Tienda online personalizada
                 </li>
                 <li class="d-flex text-muted mb-2">
-                  <i class="bx bx-x fs-xl me-1"></i>
+                  <i class="mdi mdi-close fs-xl me-1"></i>
                   Uso de chatbot inteligente
                 </li>
                 <li class="d-flex text-muted">
-                  <i class="bx bx-x fs-xl me-1"></i>
+                  <i class="mdi mdi-close fs-xl me-1"></i>
                   Predicciones con IA
                 </li>
               </ul>
@@ -185,11 +190,10 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100 border-0 bg-primary shadow-primary shadow-dark-mode-none p-xxl-3"
-            style="min-width: 18rem;">
+          <div class="card h-100 border-0 bg-primary shadow-primary shadow-dark-mode-none p-xxl-3 min-width-18rem">
             <div class="card-body">
               <div class="d-flex align-items-center pb-2 pb-md-3 mb-4">
-                <div class="flex-shrink-0 rounded-3" style="background-color: rgba(255,255,255, .1);">
+                <div class="flex-shrink-0 rounded-3 bg-white-10">
                   <img src="{% static 'imagenes/landing/standard.png' %}" width="84" alt="Icon">
                 </div>
                 <div class="ps-4">
@@ -202,27 +206,27 @@
               </div>
               <ul class="list-unstyled fs-sm pb-md-3 mb-3">
                 <li class="d-flex text-light mb-2">
-                  <i class="bx bx-check fs-xl me-1"></i>
+                  <i class="mdi mdi-check fs-xl me-1"></i>
                   <span class="opacity-70">Ventas y facturación ilimitadas</span>
                 </li>
                 <li class="d-flex text-light mb-2">
-                  <i class="bx bx-check fs-xl me-1"></i>
+                  <i class="mdi mdi-check fs-xl me-1"></i>
                   <span class="opacity-70">Gestión de inventario y productos</span>
                 </li>
                 <li class="d-flex text-light mb-2">
-                  <i class="bx bx-check fs-xl me-1"></i>
+                  <i class="mdi mdi-check fs-xl me-1"></i>
                   <span class="opacity-70">Notificaciones por whatsapp</span>
                 </li>
                 <li class="d-flex text-light mb-2">
-                  <i class="bx bx-check fs-xl me-1"></i>
+                  <i class="mdi mdi-check fs-xl me-1"></i>
                   <span class="opacity-70">Tienda online personalizada</span>
                 </li>
                 <li class="d-flex text-light opacity-50 mb-2">
-                  <i class="bx bx-x fs-xl me-1"></i>
+                  <i class="mdi mdi-close fs-xl me-1"></i>
                   Uso de chatbot inteligente
                 </li>
                 <li class="d-flex text-light opacity-50">
-                  <i class="bx bx-x fs-xl me-1"></i>
+                  <i class="mdi mdi-close fs-xl me-1"></i>
                   Predicciones con IA
                 </li>
               </ul>
@@ -233,7 +237,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100 border-0 shadow-sm p-xxl-3" style="min-width: 18rem;">
+          <div class="card h-100 border-0 shadow-sm p-xxl-3 min-width-18rem">
             <div class="card-body">
               <div class="d-flex align-items-center pb-2 pb-md-3 mb-4">
                 <div class="flex-shrink-0 bg-secondary rounded-3">
@@ -249,27 +253,27 @@
               </div>
               <ul class="list-unstyled fs-sm pb-md-3 mb-3">
                 <li class="d-flex mb-2">
-                  <i class="bx bx-check fs-xl text-primary me-1"></i>
+                  <i class="mdi mdi-check fs-xl text-primary me-1"></i>
                   Ventas y facturación ilimitadas
                 </li>
                 <li class="d-flex mb-2">
-                  <i class="bx bx-check fs-xl text-primary me-1"></i>
+                  <i class="mdi mdi-check fs-xl text-primary me-1"></i>
                   Gestión de inventario y productos
                 </li>
                 <li class="d-flex mb-2">
-                  <i class="bx bx-check fs-xl me-1"></i>
+                  <i class="mdi mdi-check fs-xl me-1"></i>
                   Notificaciones por whatsapp
                 </li>
                 <li class="d-flex mb-2">
-                  <i class="bx bx-check fs-xl me-1"></i>
+                  <i class="mdi mdi-check fs-xl me-1"></i>
                   Tienda online personalizada
                 </li>
                 <li class="d-flex mb-2">
-                  <i class="bx bx-check fs-xl me-1"></i>
+                  <i class="mdi mdi-check fs-xl me-1"></i>
                   Uso de chatbot inteligente
                 </li>
                 <li class="d-flex mb-2">
-                  <i class="bx bx-check fs-xl me-1"></i>
+                  <i class="mdi mdi-check fs-xl me-1"></i>
                   Predicciones con IA
                 </li>
               </ul>
@@ -285,23 +289,103 @@
 </section>
 
 <section class="container" id="contacto">
-  <div class="bg-dark border border-light rounded-3 py-5 px-4 px-sm-0">
-    <div class="row justify-content-center py-sm-2 py-lg-5">
-      <div class="col-xl-6 col-lg-7 col-md-8 col-sm-10 text-center">
-        <h2 class="h1 text-light mb-4">¿Listo para comenzar?</h2>
-        <p class="fs-lg text-light opacity-70 pb-4 mb-3">Ingresa tu correo y nos contactaremos contigo</p>
-
-        <form class="input-group input-group-lg d-none d-sm-flex needs-validation mb-3" novalidate>
-          <input type="email" class="form-control rounded-start ps-5" placeholder="Ingrese su email" required>
-          <i
-            class="bx bx-envelope fs-lg text-muted position-absolute top-50 start-0 translate-middle-y ms-3 zindex-5"></i>
-          <div class="invalid-tooltip position-absolute top-100 start-0">Por favor, proporcione una dirección de correo electrónico válida.</div>
-          <button type="submit" class="btn btn-primary">Contactar</button>
-        </form>
-
-        <p class="fs-sm text-light opacity-50 mb-0">Sin suscripciones. Sin restricciones.</p>
+  <div class="container content-space-2 content-space-t-xl-3 content-space-b-lg-3">
+      <!-- Heading -->
+      <div class="w-md-75 w-lg-50 text-center mx-md-auto mb-5">
+        <h2>Learn to develop sites with components and design systems</h2>
       </div>
+      <!-- End Heading -->
+
+      <div class="text-center mb-10">
+        <!-- List Checked -->
+        <ul class="list-inline list-checked list-checked-primary">
+          <li class="list-inline-item list-checked-item">Asynchronous collaboration</li>
+          <li class="list-inline-item list-checked-item">Updates and announcements</li>
+          <li class="list-inline-item list-checked-item">Training and team building</li>
+        </ul>
+        <!-- End List Checked -->
+      </div>
+
+      <div class="row mb-5 mb-md-0">
+        <div class="col-sm-6 col-lg-4 mb-4 mb-lg-0">
+          <!-- Card -->
+          <div class="card card-sm h-100">
+            <div class="p-2">
+              <img class="card-img" src="assets/img/480x220/img1.jpg" alt="Image Description">
+            </div>
+
+            <div class="card-body">
+              <h4 class="card-title">Front App</h4>
+              <p class="card-text">Front App is an easier way to search on Android.</p>
+
+              <!-- List Pointer -->
+              <ul class="list-pointer mb-0">
+                <li class="list-pointer-item">Advanced Analytics</li>
+                <li class="list-pointer-item">Digital Marketing</li>
+                <li class="list-pointer-item">Organization</li>
+              </ul>
+              <!-- End List Pointer -->
+            </div>
+
+            <a class="card-footer card-link border-top" href="#">Learn more <i class="bi-chevron-right small ms-1"></i></a>
+          </div>
+          <!-- End Card -->
+        </div>
+        <!-- End Col -->
+
+        <div class="col-sm-6 col-lg-4 mb-4 mb-lg-0">
+          <!-- Card -->
+          <div class="card card-sm h-100">
+            <div class="p-2">
+              <img class="card-img" src="assets/img/480x220/img2.jpg" alt="Image Description">
+            </div>
+
+            <div class="card-body">
+              <h4 class="card-title">Front Chat</h4>
+              <p class="card-text">Front Chat is a new way to communicate with your team.</p>
+
+              <!-- List Pointer -->
+              <ul class="list-pointer mb-0">
+                <li class="list-pointer-item">Cost Transformation</li>
+                <li class="list-pointer-item">Customer Experience</li>
+                <li class="list-pointer-item">Mergers and Acquisitions</li>
+              </ul>
+              <!-- End List Pointer -->
+            </div>
+
+            <a class="card-footer card-link border-top" href="#">Learn more <i class="bi-chevron-right small ms-1"></i></a>
+          </div>
+          <!-- End Card -->
+        </div>
+        <!-- End Col -->
+
+        <div class="col-sm-6 col-lg-4">
+          <!-- Card -->
+          <div class="card card-sm h-100">
+            <div class="p-2">
+              <img class="card-img" src="assets/img/480x220/img3.jpg" alt="Image Description">
+            </div>
+
+            <div class="card-body">
+              <h4 class="card-title">Front Calendar</h4>
+              <p class="card-text">Discover an easier way to manage contacts, sales and grow lasting relationships.</p>
+
+              <!-- List Pointer -->
+              <ul class="list-pointer mb-0">
+                <li class="list-pointer-item">Enterprise Technology</li>
+                <li class="list-pointer-item">Private Equity</li>
+                <li class="list-pointer-item">Sustainability</li>
+              </ul>
+              <!-- End List Pointer -->
+            </div>
+
+            <a class="card-footer card-link border-top" href="#">Learn more <i class="bi-chevron-right small ms-1"></i></a>
+          </div>
+          <!-- End Card -->
+        </div>
+        <!-- End Col -->
+      </div>
+      <!-- End Row -->
     </div>
-  </div>
 </section>
 {% endblock content %}
