--- a/ventas/templates/ventas/crearVenta.html
+++ b/ventas/templates/ventas/crearVenta.html
@@ -26,6 +26,7 @@
     </div>
 
     <form id="form_sale" action="{% url 'crearVenta' %}" class="saleForm" method="post">
+        {% csrf_token %}
         <div class="row">
             <div class="col-lg-8 mb-4">
                 <div class="card border-light shadow-sm">
